tdf#96482 Revert "Resolves: tdf#94069 call setVisible when setDesignMode is called"

This reverts commit a7816853bad55ada597092c16ba9a0a761e067d0.

tdf#94069 (freeze) has been corrected differently in master (5.2.alpha) anyway.