svx/source/fmcomp/fmgridif.cxx
@@ -1692,8 +1692,6 @@ void FmXGridPeer::setDesignMode(sal_Bool bOn) throw( RuntimeException, std::exce
             static_cast<FmGridControl*>(pWin)->SetDesignMode(bOn);
     }
 
-    setVisible(!bOn);
-
     if (bOn)
         DisConnectFromDispatcher();
     else
